# llm-judge

./: .gitignore  CHOICES.md  CONTRIBUTING.md  NEXT.md  README.md  SKILL_reference.md  package-lock.json  package.json  prd.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI.md
examples/: run_elo.sh  run_review.sh
pipeliner/: llm_judge_module.test.ts  llm_judge_module.ts
references/: __init__.py  criteria_template.md  elo.py  minimax-provider-quirks.md  providers.py
scripts/: __init__.py  run_judge.py  test_judge.py
src/: __main__.py  cli.js
test/fixtures/: essay_a.md  essay_b.md
tests/: __init__.py  test_llm_judge.py
